--- a/myolq/src/main/AndroidManifest.xml
+++ b/myolq/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.personage.myolq">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-
 
     <application
         android:name=".base.InitApplication"
@@ -12,9 +12,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name=".test.TestActivity"
+            android:name=".mvp.view.activity.MainActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -31,23 +30,28 @@
         <activity
             android:name=".mvp.view.activity.RegisterActivity"
             android:label="@string/title_activity_register"
-            android:theme="@style/AppTheme.NoActionBar"
-            >
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <!--<activity-->
-            <!--android:name=".test.TestActivity"-->
-            <!--android:label="@string/title_activity_register"-->
-            <!--android:theme="@style/AppTheme.NoActionBar"-->
-            <!--&gt;-->
-        <!--</activity>-->
+        <!-- <activity -->
+        <!-- android:name=".test.TestActivity" -->
+        <!-- android:label="@string/title_activity_register" -->
+        <!-- android:theme="@style/AppTheme.NoActionBar"> -->
+        <!-- </activity> -->
+        <!-- <activity -->
+        <!-- android:name=".test.Test2Activity" -->
+        <!-- android:label="@string/title_activity_register" -->
+        <!-- android:theme="@style/AppTheme.NoActionBar"> -->
+        <!-- </activity> -->
         <activity
-            android:name=".test.Test2Activity"
-            android:label="@string/title_activity_register"
-            android:theme="@style/AppTheme.NoActionBar"
-            >
-            </activity>
-        </application>
+            android:name=".mvp.view.activity.LoginActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".mvp.view.activity.AActivit"
+            android:label="@string/title_activity_a"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+    </application>
 
-    </manifest>
-
-
+</manifest>
