--- a/workframe/build.gradle
+++ b/workframe/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
+
+    compile 'com.android.support:recyclerview-v7:23.2.0'
+
 }
