--- a/bmobsdk/build.gradle
+++ b/bmobsdk/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compile 'cn.bmob.android:bmob-sdk:3.4.7-aar'
 
     //bmob-push：Bmob的推送包
-    compile 'cn.bmob.android:bmob-push:0.8'
+//    compile 'cn.bmob.android:bmob-push:0.8'
 
     //bmob-im：Bmob的即时通讯包，注意每个版本的im依赖特定版本的bmob-sdk，具体的依赖关系可查看下面注释[2]
     compile 'cn.bmob.android:bmob-im:2.0.5@aar'
@@ -43,5 +43,7 @@ dependencies {
 
     //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
     compile 'cn.bmob.android:http-legacy:1.0'
+
+    compile 'com.orhanobut:logger:1.4'
 
 }
