--- a/myolq/build.gradle
+++ b/myolq/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile project(':workframe')
     compile project(':javabean')
+    compile project(':bmobsdk')
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
