添加聊天界面，新朋友界面

--- a/myolq/src/main/AndroidManifest.xml
+++ b/myolq/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
             android:label="@string/title_activity_chat"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name=".mvp.view.activity.NewFriendActivity"
+            android:label="@string/title_activity_new_friend"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
