--- a/myolq/src/main/AndroidManifest.xml
+++ b/myolq/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:label="@string/title_activity_home_page"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
