--- a/workframe/build.gradle
+++ b/workframe/build.gradle
@@ -21,24 +21,23 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:22.2.0'
+//    compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
 
     compile project(':utils')
-
     compile project(':widget')
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.jakewharton:butterknife:7.0.0'
 
     compile 'com.google.code.gson:gson:2.4'
-    compile 'com.squareup.okhttp3:okhttp:3.0.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
-    compile 'io.reactivex:rxandroid:1.0.1'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
+//    compile 'com.squareup.okhttp3:okhttp:3.0.1'
+//    compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+//    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+//    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+//    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+//    compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
-    compile 'com.android.support:recyclerview-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
 
 }
